Add moditec maven plugin to handle gracefully non-modular dependencies